contrast fix

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -268,6 +268,7 @@ header {
 
 .red-color {
   color: red;
+  font-weight: bold;
 }
 
 i {
